# backend

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini  refactor.md  spec.md  tasks.md
.github/workflows/: DOCKER.md  README.md  docker.yml  test.yml
app/: main.py
app/api/: api.py  auth.py  dependencies.py  employees.py  me.py  overtime.py  setup.py  users.py
app/config/: database.py  settings.py
app/core/: exception_handlers.py  exceptions.py
app/models/: __init__.py  employee.py  employee_hierarchy.py  overtime.py  server_store.py  time_entry.py  user.py
app/repositories/: employee.py  employee_hierarchy.py  overtime.py  server_store.py  time_entry.py  user.py
app/schemas/: auth.py  employee.py  me.py  query.py  server_store.py  setup.py  time_entry.py  user.py
app/services/: auth.py  autherization.py  employee.py  overtime.py  setup.py  time_entry.py  user.py
docs/: README.md  api-spec.md  architecture.md  authentication.md  configuration.md  database.md  development.md  errors.md  setup.md
docs/refactoring/: improvements-recommendations.md  main-cleanup.md
src/: main.py
src/api/: auth.py  dependencies.py  overtime.py  time_records.py  users.py
src/config/: database.py  settings.py
src/core/: exceptions.py  security.py
src/models/: emloyee.py  emloyee_nd.py  employee.py  time_entry.py  time_entry_nd.py  time_record.py  user.py  user_nd.py
src/repositories/: overtime.py  time_record.py  user.py
src/schemas/: auth.py  (+1 more)
tests/: EXAMPLES.py  README.md  __init__.py  conftest.py
(+12 files in other folders)
